--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
       with:
         github_access_token: ${{secrets.ACCESS_TOKEN }}
         buil_folder: dist/simple-app
-        base_href: /Avril-Terrones/
+        base_href: /TP2_HOUESSOU_Florence/
     
